# HydraLP

./: README.md
client/: .env.tmp  Readme.md  SKILL.md  index.html  package.json  server.js  settings.json
connector/: Cargo.toml  Readme.md
connector/src/: main.rs
connector/src/api/: helius.rs  mod.rs  raydium.rs
propritary-server/: Readme.md
